--- a/src/app.css
+++ b/src/app.css
@@ -46,7 +46,7 @@ h1 {
   text-align: center;
 }
 
-button {
+button, input {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -54,7 +54,6 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
-  cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
